
SUBDIRS = \
	cloudfiles \
	php \
	pub \
	smarty \
	sql \
	tpl

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation
almidon_core_DATA =

## Directory target
almidon_coredir = \
	$(datarootdir)/almidon/core

EXTRA_DIST = \
	$(almidon_core_DATA)

## File created by the gnome-build tools

