## File created by the gnome-build tools

SUBDIRS = \
	cache\
	classes \
	files \
	logs \
	misc \
	public_html \
	secure  \
	templates \
	templates_c

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation
	
almidon_demo_DATA =  \
   almidon \
   antidemo.mysql \
   antidemo.sql \
   country.sql \
   create.sql \
   demo.almidon.conf \
   demo.mysql \
   demo.sql \ 
   .htpasswd 

almidon_demodir = \
                   $(documentrootdir)/almidon/demo

EXTRA_DIST = \
	$(almidon_demo_DATA) 



