
SUBDIRS = \
	 phpdoc \
	 media

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidondoc_DATA = \
  ChangeLog \
  COPYING \
  ENTENDIENDO.html \
  index.html \
  INSTALL.debian \
  INSTALL.fedora \
  INSTALL.html \
  INSTALL.mysql \
  INSTALL.OSX \
  INSTALL.ubuntu \
  INSTALL.xampp \
  KNOWN \
  LICENSE \
  MANUAL.html \
  README \
  README.git \
  README.html \
  UTILIZANDO.html \
  VERSION

## Directory target
almidondocdir = $(datarootdir)/doc/almidon

almidondoc2_DATA= \
  $(almidondoc_DATA)
  
almidondoc2dir = \
   $(datarootdir)/almidon/doc
    
EXTRA_DIST = $(almidondoc_DATA) \
             $(almidondoc2_DATA)

## File created by the gnome-build tools

