## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_scripts_SCRIPTS = config.sh \
                                             demo-setup.sh \
                                             site-setup.sh \
                                             phpdoc-almidon.sh

## Directory target
                                             
almidon_scriptsdir = $(documentrootdir)/almidon/scripts

EXTRA_DIST = $(almidon_scripts_SCRIPTS)



