## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation
almidon_core_cloudfiles_DATA = AUTHORS\
                               Changelog \
                               cloudfiles.php \
                               cloudfiles_exceptions.php \
                               cloudfiles_http.php \
                               COPYING \
                               index.php \
                               README

## Directory target
almidon_core_cloudfilesdir = \
	$(datarootdir)/almidon/core/cloudfiles

EXTRA_DIST = \
	$(almidon_core_cloudfiles_DATA)
