
SUBDIRS = \
	pear\
	Rounded \
	Smarty

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation
almidon_core_php_DATA = \
	403.php        \
	404.php        \
	alm.tables.class.php        \
	almidon.php        \
	captcha.png.php        \
	child.php        \
	createlinks.php        \
	db.addcolumn.php        \
	db.addrecord.php        \
	db.catalogcolumnexists.php        \
	db.const.php        \
	db.dal.php        \
	db.data.php        \
	db.deleterecord.php        \
	db.dumpdata.php        \
	db.error.php        \
	db.fetchnext.php        \
	db.fetchprev.php        \
	db.getarray.php        \
	db.getlist.php        \
	db.http_auth_user.php        \
	db.logging.php        \
	db.parsevar.php        \
	db.preupdate.php        \
	db.query.php        \
	db.readargs.php        \
	db.readdata.php        \
	db.readdatafilter.php        \
	db.readenv.php        \
	db.readenv2.php        \
	db.readrecord.php        \
	db.readrecord2.php        \
	db.selectlist.php        \
	db.selectmenu.php        \
	db.synctodb.php        \
	db.updaterecord.php        \
	db.updaterecord2.php        \
	db2.class.php        \
	db3.class.php        \
	default.php        \
	exchange.php        \
	htpasswd.inc.php        \
	image.class.php        \
	index.php        \
	ip_in_range.php \
	lang.en.php        \
	lang.es.php        \
	lang.php        \
	login.php        \
	object.cp.php        \
	object.php        \
	object_abajo.php        \
	object_derecha.php        \
	object_order.php        \
	object_ro.php        \
	pagina.php        \
	robots.txt        \
	setup.autotables.php        \
	setup.dd.php        \
	setup.gensql.php        \
	setup.php        \
	setup.tests.php        \
	typical.php        \
	users.php        \
	usuario.php        \
	video.php

## Directory target	
almidon_core_phpdir = \
	$(datarootdir)/almidon/core/php
	
EXTRA_DIST = \
	$(almidon_core_php_DATA)

## File created by the gnome-build tools

