
SUBDIRS = \
	js  \
        themes

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_core_pub_DATA = \
	404.php        \
	default.php        \
	index.php        \
	pic.php        \
	robots.txt   \
	video.php

## Directory target

almidon_core_pubdir = \
	$(documentrootdir)/almidon/core/pub

EXTRA_DIST = \
	$(almidon_core_pub_DATA)

## File created by the gnome-build tools

