## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_core_smarty_DATA = \
	define.datagrid.php\
	function.calendar.php\
	function.confirm_delete.php \
	function.count.php \
	function.dataform.php \
	function.dataform2.php \
	function.datagrid.php \
	function.datagrid2.php \
	function.datareport.php \
	function.datareport2.php \
	function.http_user_auth.php \
	function.include_video_service.php \
	function.lang_const.php \
	function.mini_calendar.php \
	function.share_bookmarklet.php \
	modifier.br2nl.php \
	modifier.ficon.php \
	modifier.friendly_url.php \
	modifier.fsize.php \
	modifier.fsize_format.php \
	modifier.img.php \
	modifier.p2nl.php \
	modifier.return_bytes.php \
	modifier.time_pic.php \
	modifier.txt2html.php \
	modifier.url.php \
	modifier.urltruncate.php \
	shared.lang.php \
	shared.lang_en.php \
	shared.share_bookmarklet.php \
	shared.video_service.php

## Directory target

almidon_core_smartydir = \
	$(datarootdir)/almidon/core/smarty

EXTRA_DIST = \
	$(almidon_core_smarty_DATA)

SUBDIRS = \
	validate
