
## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_core_sql_DATA = \
	alm.tables.sql

## Directory target

almidon_core_sqldir = \
	$(documentrootdir)/almidon/core/sql

EXTRA_DIST = \
	$(almidon_core_sql_DATA)

## File created by the gnome-build tools
