## File created by the gnome-build tools


## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_core_tpl_DATA = \
	child.tpl      \
	child_header.tpl      \
	default.tpl      \
	footer.tpl      \
	header.old      \
	header.tpl      \
	header_blank.tpl      \
	htmlEditor.tpl      \
	index.tpl      \
	index_sec.tpl      \
	login.tpl      \
	normal.tpl      \
	pagina.tpl      \
	query.tpl      \
	usuario.tpl      \
	video.tpl

## Directory target

almidon_core_tpldir = \
	$(documentrootdir)/almidon/core/tpl

EXTRA_DIST = \
	$(almidon_core_tpl_DATA)
