## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidondemocache_DATA =

## Directory target

almidondemocachedir = \
$(datarootdir)/almidon/demo/cache

EXTRA_DIST = \
	$(almidondemocache_DATA)

