## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_demo_classes_DATA = \
	app.class.php      \
	config.php      \
	config.ori.php      \
	extra.class.php      \
	tables.class.php
	
## Directory target

almidon_demo_classesdir = \
 $(datarootdir)/almidon/demo/classes

EXTRA_DIST = \
	$(almidon_demo_classes_DATA)

