
SUBDIRS = \
	enlace\
	foto \
	pagina

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation
	
almidon_demo_files_DATA = .htaccess   
	
## Directory target

almidon_demo_filesdir = \
	$(datarootdir)/almidon/demo/files
	
EXTRA_DIST = \
	$(almidon_demo_files_DATA) 	

## File created by the gnome-build tools

