## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_demo_logs_DATA =  \
   install.log

## Directory target

almidon_demo_logsdir = \
 $(datarootdir)/almidon/demo/logs

EXTRA_DIST = \
	$(almidon_demo_logs_DATA)
