## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_demo_misc_DATA = \
	ccTLDs.html     \
	ccTLDs.sql     \
	ccTLDs.txt     \
	languages-countries.txt     \
	languages.sql     \
	languages.txt

## Directory target

almidon_demo_miscdir = \
 $(datarootdir)/almidon/demo/misc

EXTRA_DIST = \
	$(almidon_demo_misc_DATA)
