
SUBDIRS = \
	css\
	img

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation
	
almidon_demo_public_html_DATA = \
	country.php            \
	noticia.php  \
	.htaccess

## Directory target

almidon_demo_public_htmldir = \
 $(datarootdir)/almidon/demo/public_html

EXTRA_DIST = \
	$(almidon_demo_public_html_DATA)
	
## File created by the gnome-build tools

