## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_demo_secure_DATA = \
    .htaccess 

## Directory target

almidon_demo_securedir = \
	$(datarootdir)/almidon/demo/secure

EXTRA_DIST = \
	$(almidon_demo_secure_DATA)

