## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_demo_templates_DATA = \
	country.tpl          \
	footer.tpl          \
	header.tpl          \
	noticia.tpl

## Directory target

almidon_demo_templatesdir = \
	$(datarootdir)/almidon/demo/templates

EXTRA_DIST = \
	$(almidon_demo_templates_DATA)

