## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_doc_mediadoc_DATA = 

## Directory target

almidon_doc_mediadocdir = \
	$(datarootdir)/doc/almidon/media

EXTRA_DIST = \
	$(almidon_doc_phpdoc_DATA)
