
SUBDIRS = \
	almidon\
	media

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_doc_phpdoc_DATA = \
	blank.html       \
	classtrees_almidon.html       \
	elementindex.html       \
	elementindex_almidon.html       \
	errors.html       \
	index.html       \
	li_almidon.html       \
	packages.html	 \
	.htaccess
	
## Directory target

almidon_doc_phpdocdir = \
	$(datarootdir)/doc/almidon/phpdoc

EXTRA_DIST = \
	$(almidon_doc_phpdoc_DATA)

## File created by the gnome-build tools

