## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_core_php_Rounded_DATA = \
	Corner.php             \
	Rectangle.php             \
	RGB.php             \
	Side.php             \
	Tools.php

## Directory target

almidon_core_php_Roundeddir = \
 $(datarootdir)/almidon/core/php/Rounded
	
EXTRA_DIST = \
	$(almidon_core_php_Rounded_DATA)

