
SUBDIRS = \
	internals\
	plugins

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation
	
almidon_core_php_Smarty_DATA = \
	Config_File.class.php \
	debug.tpl \
	Smarty.class.php \
	Smarty_Compiler.class.php

## Directory target

almidon_core_php_Smartydir = \
 $(datarootdir)/almidon/core/php/Smarty
	
EXTRA_DIST = \
	$(almidon_core_php_Smarty_DATA)

## File created by the gnome-build tools

