## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation
almidon_core_php_pear_DATA = Date.php \
                             PEAR.php 

## Directory target
almidon_core_php_peardir = \
 $(datarootdir)/almidon/core/php/pear
	
EXTRA_DIST = \
	$(almidon_core_php_pear_DATA)

SUBDIRS = \
	Calendar\
	Date \
	XML
