
SUBDIRS = \
	autocomplete\
	html \
	tiny_mce

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation
	
almidon_core_pub_js_DATA = \
	common.js         \
	jquery.js         \
	menu.js         \
	tools.js

## Directory target

almidon_core_pub_jsdir = \
		$(datarootdir)/almidon/core/pub/js

EXTRA_DIST = \
	$(almidon_core_pub_js_DATA)	

## File created by the gnome-build tools

