## List of directories included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

SUBDIRS = \
          wax

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_core_pub_themes_DATA = 
	
## Directory target

almidon_core_pub_themesdir = \
	$(documentrootdir)/almidon/core/pub/themes

EXTRA_DIST = \
	$(almidon_core_pub_themes_DATA)

## File created by the gnome-build tools

