## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_core_smarty_validate_DATA = \
	function.validate.php      \
	function.validate_init.php      \
	NEWS      \
	README      \
	SmartyValidate.class.php      \
	validate_criteria.dummyValid.php      \
	validate_criteria.isCCExpDate.php      \
	validate_criteria.isCCNum.php      \
	validate_criteria.isDate.php      \
	validate_criteria.isDateAfter.php      \
	validate_criteria.isDateBefore.php      \
	validate_criteria.isDateEqual.php      \
	validate_criteria.isDateOnOrAfter.php

## Directory target

almidon_core_smarty_validatedir = \
	$(datarootdir)/almidon/core/smarty/validate

EXTRA_DIST = \
	$(almidon_core_smarty_validate_DATA)

## File created by the gnome-build tools
