## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_demo_files_enlace_DATA = \
	1207951914_logo.gif     \
	1207951982_y3.gif

## Directory target

almidon_demo_files_enlacedir = \
	$(datarootdir)/almidon/demo/files/enlace
	
EXTRA_DIST = \
	$(almidon_demo_files_enlace_DATA) 	
