## File created by the gnome-build tools

## List of files included into directory target from instalation
## Reedit only if goes to include new file into directory target from instalation

almidon_demo_files_foto_DATA = \
	balloons_2_bg_060504.jpg\
	beach_3_bg_010503.jpg \
	bigsur_28_bg_101203.jpg \
	canada_40_bg_061904.jpg \
	chips_3_bg_102602.jpg \
	coffee_01_bg_031106.jpg \
	fruit_2_bg_020203.jpg \
	ireland_102_bg_061602.jpg \
	ireland_37_bg_070504.jpg

## Directory target

almidon_demo_files_fotodir = \
	$(datarootdir)/almidon/demo/files/foto
	
EXTRA_DIST = \
	$(almidon_demo_files_foto_DATA) 	
